# obsidian-syncer

./: .env.example  .gitignore  CUSTOM-JWT-AUTH.md  JWT-AUTH-README.md  JWT-STATUS.md  Makefile  README.md  SETUP-INSTRUCTIONS.md  backup.sh  deploy.sh  docker-compose.yml  generate-jwt.py  generate-jwt.sh  local.ini
auth-proxy/: Dockerfile  auth-proxy.service  cli.py  database.py  main.py  pyproject.toml  requirements.txt  setup_uri.py
couchdb/: local.ini.template
nginx/: Dockerfile  entrypoint.sh  nginx.conf.template  ssl-params.conf
scripts/: backup.sh  generate-secrets.sh  init-couchdb.sh  setup-ssl.sh
